packages/error/test/helpers/throw-error.js
const SemanticReleaseError =require('../../src');

module.exports = () => {
  throw new SemanticReleaseError('message', 'code');
};
